# Agent-Analysis

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  requirements-dev.txt  requirements-postgres.txt  requirements.txt
backend/app/: __init__.py  constants.py  main.py  retry_budget.py  state_machine.py
backend/app/agents/: __init__.py  fake_provider.py  manual_provider.py  provider.py  runtime.py
backend/app/api/: __init__.py  routes_chains.py  routes_models.py  routes_runs.py  store.py
backend/app/chains/: __init__.py  (+4 more)
backend/scripts/: generate_schemas.py
backend/tests/: conftest.py  test_agent_runtime.py  test_ai_readiness_chain.py  test_analysis_workflow.py  test_api.py  test_bug_fix_chain.py  test_chain_api.py  test_chain_registry.py  test_ci_failure_repair_chain.py  test_command_runner.py  test_dependency_update_chain.py  test_documentation_chain.py  test_evidence_gate.py  test_git_runner.py  test_handler_authority.py  test_handler_result.py  test_implementation_chain.py  test_implementation_chain_real.py  test_llm_invocation.py  test_manifest_gate.py  test_manifest_gate_models.py  test_model_catalog.py  test_model_policy_gate.py  test_model_router.py  test_models_api.py  test_no_self_certification_gate.py  test_pr_gate.py  test_rate_limit.py  test_retry_budget.py  test_run_repository.py  test_runtime_execution_spine.py  test_sandbox_policy.py  test_scope_gate.py  test_scrum_gate.py  test_security_review_chain.py  test_state_machine.py  test_storage.py  test_strategic_programming_gate.py  test_structured_parser.py  test_test_gate.py  (+2 more)
(+82 files in other folders)
